# rpled

./: Cargo.toml  README.md  design.MD
ops_derive/: Cargo.toml
ops_derive/src/: lib.rs
pixelscripts/: blinky.pxl  chase.pxl  rainbow.pxl
rpled-compile/: Cargo.toml  test.txt  test2.txt
rpled-compile/.claude/: settings.local.json
rpled-compile/src/: heap.rs  lib.rs  main.rs  parser.rs  scope.rs  script.rs  update_testprogs.rs  value.rs  visitor.rs
rpled-compile/tests/: compiler_tests.rs
rpled-compile/tests/pixelscripts/: invalid_closure.out  invalid_closure.pxl  invalid_generic_for.out  invalid_generic_for.pxl  invalid_method_call.out  invalid_method_call.pxl  invalid_multiple_return.out  invalid_multiple_return.pxl  invalid_table.out  invalid_table.pxl  invalid_varargs.out  invalid_varargs.pxl  missing_header.out  missing_header.pxl  valid_simple.out  valid_simple.pxl
rpled-compiler/: Cargo.toml
rpled-debug/: Cargo.toml
rpled-debug/src/: main.rs
rpled-pixelscript/: Cargo.toml  build.rs  grammar.bnf  test_debug.rs  test_result.pxl
rpled-pixelscript/.claude/: settings.local.json
rpled-pixelscript/src/: ast.rs  ast_format.rs  astx.rs  error.rs  lexer.rs  lib.rs  parser.rs  parser_ext.rs  parsers.rs
rpled-pixelscript/src/ast/: block.rs  call.rs  constant.rs  expr.rs  literal.rs  metadata.rs  mod.rs  program.rs  statement.rs
rpled-pixelscript/src/format/: formatter.rs  mod.rs  options.rs  traits.rs
rpled-pixelscript/src/old_tests/: ast_format_tests.rs  expr_tests.rs  lexer_tests.rs  mod.rs  program_tests.rs  stmt_tests.rs
rpled-pixelscript/src/parsers/: common.rs  expr.rs  literal.rs  metadata.rs  mod.rs  stmt.rs
rpled-pixelscript/src/tests/: ast_format_tests.rs  block_tests.rs  expr_tests.rs  fixture_tests.rs  format_tests.rs  lexer_tests.rs  metadata_tests.rs  mod.rs  parser_ext_tests.rs  program_tests.rs  stmt_tests.rs
rpled-pixelscript/testprogs/: comprehensive.pxs  fizzbuzz.pxs  function.pxs  lex_error.pxs  loops.pxs  nested_metadata.pxs  simple.pxs  syntax_error.pxs  test.pxs
rpled-vm/: Cargo.toml
rpled-vm/.claude/: settings.local.json
rpled-vm/src/: fixture_parse.rs  lib.rs  packed.rs  program.rs  read.rs  sync.rs  vm.rs
rpled-vm/src/modules/: define_module.rs  led.rs  mod.rs  test.rs
rpled-vm/src/ops/: bitwise.rs  compare.rs  control.rs  math.rs  mod.rs  stack.rs
rpled-vm/src/sync/: tokio_sync.rs
testprogs/: calltypes.pxs.txt  countdown.pxs.txt  noop.pxs.txt  testcall.pxs.txt  testpushcall.pxs.txt  wraparound.pxs.txt
testprogs/compare/: ast.txt  script.pxl
testprogs/comprehensive/: ast.txt  script.pxl
testprogs/fizzbuzz/: ast.txt  script.pxl
testprogs/funccall/: ast.txt  script.pxl
testprogs/function/: ast.txt  script.pxl  script_test.pxl
testprogs/lex_error/: ast.txt  script.pxl
testprogs/loops/: ast.txt  script.pxl
testprogs/nested_metadata/: ast.txt  script.pxl
testprogs/simple/: ast.txt  script.pxl
testprogs/syntax_error/: ast.txt  script.pxl
testprogs/temp-bytecode/: arithmetic.pxs.txt  (+4 more)
(+1 files in other folders)
