[package]
name = "rpled-compile"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rpled-compile"
path = "src/main.rs"

[[bin]]
name = "update-testprogs"
path = "src/update_testprogs.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rpled-pixelscript = { path = "../rpled-pixelscript" }
anyhow = "1.0"
colored = "2.1"

[dev-dependencies]
rstest = "0.23"
