[package]
name = "rpled-vm"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.24.0", features=["derive"] }
bitflags = { version = "2.10.0", default-features = false, features = ["bytemuck"] }
embassy-sync = { version = "*", optional = true }
tokio = { version = "1.39.0", features = ["full"], optional = true }
paste = "1.0.15"
regex = { version = "1.11.1", optional = true }
strum = { version = "0.26", features = ["derive"] }
ops_derive = { path = "../ops_derive" }

[dev-dependencies]
regex = "*"
rstest = "*"
tokio = { version = "1.39.0", features = ["full"] }


[features]
default = ["led", "tokio", "std"]
led = []
embassy = ["embassy-sync"]
tokio = ["dep:tokio"]
std = ["regex"]

